# EchoXFlow

./: .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release-noop.yml  release.yml
configs/: benchmark_methods.yaml  benchmark_table.yaml  segmentation_beamspace.yaml  segmentation_cartesian.yaml
configs/bench_smoke/: color_doppler.yaml  segmentation.yaml  tissue_doppler.yaml
configs/test_smoke/: color_doppler.yaml  segmentation.yaml  tissue_doppler.yaml
scripts/: build_benchmark_table.py  croissant_summary_table.py  evaluate_tissue_doppler_roi_loss.py  extract_example_scan_converted_images.py  extract_example_strips.py  plot_ecg_alignment_concept.py  plot_one_ecg_per_exam.py  plot_paper_3d_lv_mesh.py  plot_paper_3d_lv_volume_curve.py  plot_paper_segmentation_and_strain.py  plot_task_predictions.py  plot_tissue_doppler_roi_velocities.py  run_full_benchmark.sh
src/echoxflow/: __init__.py  colors.py  croissant.py  export.py  loading.py  manifest.py  mesh.py  objects.py  preview.py  spectral.py  streams.py
src/echoxflow/config/: __init__.py  colors.yml  defaults.yml
src/echoxflow/plotting/: __init__.py  annotations.py  api.py  cartesian.py  clinical.py  colorbar.py  gating.py  layout.py  overlay.py  panels.py  renderer.py  specs.py  style.py  timeline.py  writers.py
src/echoxflow/scan/: __init__.py  beat_stitching.py  contours.py  conversion.py  coordinates.py  geometry.py  interpolation.py  layers.py  matplotlib.py  rasterization.py  resampling.py  spherical.py
tasks/: README.md  __init__.py  _config.py  bench.py  registry.py  train.py
tasks/_template_task/: __init__.py  dataset.py  task.py  train.yaml  types.py
tasks/color_doppler/: README.md  __init__.py  dataset.py  task.py  train.yaml  types.py
tasks/segmentation/: README.md  __init__.py  dataset.py  task.py  train.yaml  types.py
tasks/template_task/: __init__.py  dataset.py  task.py  train.yaml  types.py
tasks/tissue_doppler/: README.md  __init__.py  dataset.py  roi.py  task.py  train.yaml  types.py
tasks/utils/: __init__.py  dataset.py  model.py  optim.py  seed.py  types.py
tasks/utils/models/: __init__.py  temporal_mean.py  unet.py
tasks/utils/training/: __init__.py  config.py  core.py  debug.py  device.py  io.py  logs.py  loss.py  metrics.py  module.py  preview.py  progress.py  runners.py  runtime.py
tests/: test_cartesian_plotting.py  test_clinical_plotting.py  test_core_api_request.py  test_croissant_arrays.py  test_import.py  test_plotting.py  test_recording_objects.py  test_scan.py  test_strain_plotting.py  test_streams.py  test_task_registry.py  test_tissue_doppler_roi.py
